specs/001-typescript-to-zig-native/examples/valid/import-main.ts
import add from "./import-math.ts";

console.log(add(8, 9));
