specs/001-typescript-to-zig-native/examples/invalid/import-remote.ts
import add from "https://example.com/math.ts";

console.log(1);
